listo el pollo datos personales

--- a/index.html
+++ b/index.html
@@ -135,17 +135,40 @@
           <fieldset>
             <div class="form-group text-center">
               <legend class="user_data">Datos Personales</legend>
-                <div class="form-group input-element">
-                  <input type="text" id="nombre" name="" value="Nombre" placeholder="Nombre Completo">
+                <div class="form-group">
+                  <input class="input-element" type="text" id="nombre" name="" value="Nombre" placeholder="Nombre Completo">
                 </div>
-                <div class="form-group input-element">
-                  <input type="text" id="email" name="Email" value="Email" placeholder="Correo Electronico">
+                <div class="form-group">
+                  <input class="input-element" type="text" id="email" name="Email" value="Email" placeholder="Correo Electronico">
                 </div>
-                <div class="form-group input-element">
-                  <input type="text" id="telefono" name="" value="Telefono" placeholder="Telefono">
+                <div class="form-group">
+                  <input class="input-element" type="text" id="telefono" name="" value="Telefono" placeholder="Telefono">
                 </div>
-                <div class="form-group input-element">
-                  <input type="text" id="ciudad" name="" value="Ciudad">
+                <div class="form-group">
+                  <input class="input-element" type="text" id="ciudad" name="" value="Ciudad">
+                </div>
+            </div>
+            <div class="form-group text-center">
+              <legend class="user_data">Elige tus categorias favoritas.</legend>
+                <div class="checkbox-inline">
+                  <label for="terror" class="label_class">Terror</label>
+                  <input type="checkbox" id="terror" name="terror"></input>
+                </div>
+                <div class="checkbox-inline">
+                  <label for="comedia" class="label_class">Comedia</label>
+                  <input type="checkbox" id="comedia" name="comedia"></input>
+                </div>
+                <div class="checkbox-inline">
+                  <label for="suspenso" class="label_class">Suspenso</label>
+                  <input type="checkbox" id="suspenso" name="suspenso"></input>
+                </div>
+                <div class="checkbox-inline">
+                  <label for="accion" class="label_class">Acción</label>
+                  <input type="checkbox" id="accion" name="acccion"></input>
+                </div>
+                <div class="checkbox-inline">
+                  <label for="porno" class="label_class">Porno</label>
+                  <input type="checkbox" id="porno" name="porno"></input>
                 </div>
             </div>
           </fieldset>
