--- a/index.html
+++ b/index.html
@@ -136,16 +136,16 @@
             <div class="form-group text-center">
               <legend class="user_data">Datos Personales</legend>
                 <div class="form-group">
-                  <input class="input-element" type="text" id="nombre" name="" value="Nombre" placeholder="Nombre Completo">
+                  <input class="input-element" type="text" id="nombre" name=""  placeholder="Nombre Completo">
                 </div>
                 <div class="form-group">
-                  <input class="input-element" type="text" id="email" name="Email" value="Email" placeholder="Correo Electronico">
+                  <input class="input-element" type="text" id="email" name="Email" placeholder="Correo Electronico">
                 </div>
                 <div class="form-group">
-                  <input class="input-element" type="text" id="telefono" name="" value="Telefono" placeholder="Telefono">
+                  <input class="input-element" type="text" id="telefono" name="" placeholder="Telefono">
                 </div>
                 <div class="form-group">
-                  <input class="input-element" type="text" id="ciudad" name="" value="Ciudad">
+                  <input class="input-element" type="text" id="ciudad" name="" placeholder="Ciudad">
                 </div>
             </div>
             <div class="form-group text-center">
@@ -170,6 +170,21 @@
                   <label for="porno" class="label_class">Porno</label>
                   <input type="checkbox" id="porno" name="porno"></input>
                 </div>
+            </div>
+            <div class="text-center">
+              <legend class="user_data">¿Desea recibir correo de nuestro sitio?</legend>
+              <div class="checkbox-inline">
+                <label for="si" class="label_class">Si</label>
+                <input type="radio" id="si" name="si"></input>
+              </div>
+              <div class="checkbox-inline">
+                <label for="no" class="label_class">No</label>
+                <input type="radio" id="no" name="no"></input>
+              </div>
+            </div>
+            <div class="text-center">
+              <button class="btn btn-primary form-control" type="button" name="guardar">Guardar</button>
+
             </div>
           </fieldset>
         </form>
